@@ -163,8 +163,8 @@ TEMPLATE_URL . '/images/social/thumbs/icons-default.png' ), 'default' => 'defaul
 			->select($themeslug."_caption_style", "Select the Caption Style", array( 'options' => array("key1" => "Bottom", "key2" => "Right", "key3" => "Left", "key4" => "None")))
 			->select($themeslug."_slider_animation", "Select the Sidebar Animation", array( 'options' => array("key1" => "Random", "key2" => "sliceDown", "key3" => "sliceDownLeft", "key4" => "sliceUp", "key5" => "sliceUpLeft", "key6" => "sliceUpDown", "key7" => "sliceUpDownLeft", "key8" => "fold", "key9" => "fade", "key10" => "slideInRight", "key11" => "slideInLeft", "key12" => "boxRandom", "key13" => "boxRain", "key14" => "boxRainReverse", "key15" => "boxRainGrow", "key16" => "boxRainGrowReverse",)))
 			->select($themeslug."_slider_nav", "Select the Slider Navigation", array( 'options' => array("key1" => "Dots", "key2" => "Thumbnails", "key3" => "none")))
-			->checkbox($themeslug."_hide_slider_arrows", "Slider Navigation", array('default' => true))
-			->checkbox($themeslug."_disable_nav_autohide", "Slider Navigation Auto-Hide", array('default' => true))
+			->checkbox($themeslug."_hide_slider_arrows", "Slider Arrows", array('default' => true))
+			->checkbox($themeslug."_disable_nav_autohide", "Slider Arrow Auto-Hide", array('default' => true))
 			->checkbox($themeslug."_enable_wordthumb", "WordThumb Image Resizing")
 		->subsection_end()->subsection("SEO")
 			->textarea($themeslug."_home_description", "Home Description")
@@ -177,6 +177,7 @@ TEMPLATE_URL . '/images/social/thumbs/icons-default.png' ), 'default' => 'defaul
 			->checkbox($themeslug."_disable_footer", "Toggle to enable the footer", array('default' => true))
 			->text($themeslug."_footer_text", "Footer Copyright Text")
 			->checkbox($themeslug."_hide_link", "CyberChimps Link", array('default' => true))
+			->checkbox($themeslug."_disable_afterfooter", "Toggle to enable the afterfooter", array('default' => true))
 		->close_outersection()
 	->section("Import / Export")
 		->open_outersection()
